Change State to array of States
